--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -26,6 +26,18 @@ body {
     padding: 30px;
     border-radius: 15px;
 }
+.section__title {
+    color: var(--color-text-light);
+    font-size: var(--size-title-text);
+    font-weight: var(--title-font-weight);
+    margin: 0 auto;
+    max-width: 906px;
+    text-align: center;
+}
+.section__title-wrapper {
+    background-color: var(--color-accent);
+    padding: 30px 0 30px 0;
+}
 
 
 /*===================================================================HEADER=================================================================================*/
@@ -169,4 +181,96 @@ body {
     background-repeat: no-repeat;
     background-position: center center;
     object-fit: contain;
+}
+/*===================================================================PROGRAM_SECTION=================================================================================*/
+
+.program__wrapper {
+    display: flex;
+    justify-content: space-between;
+}
+
+.program__content {
+    margin-top: 60px;
+}
+.program__item {
+    display: flex;
+    margin-bottom: 24px;
+}
+.program__item-info {
+    max-width: 466px;
+    margin-right: 40px;
+}
+.program__subtitle {
+    margin-top: 20px;
+    font-weight: var(--subtitle-font-weight);
+    font-size: var(--size-subtitle-text);
+    color: var(--subtitle-font-color);
+    margin-bottom: 15px;
+}
+.program__text {
+    font-weight: var(--size-button-text);
+    margin-bottom: 15px;
+}
+.program__time-wrapper {
+    display: flex;
+    align-items: center;
+}
+.program__clock-img {
+    width: 40px;
+    height: 40px;
+    margin-right: 10px;
+}
+.program__time {
+    font-weight: var(--bold-accent-font-weight);
+    font-size: var(--bold-accent-font-size);
+
+}
+.program_bottom {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.program__btn {
+    margin-top: 25px;
+}
+
+/*===================================================================SOLUTION_SECTION=================================================================================*/
+.solution__section {
+    padding-bottom: 42px;
+}
+
+.section__title-wrapper_type_green {
+    background-color: var(--color-background-solution);
+    padding-bottom: 40px;
+}
+.solution__content {
+    background-color: var(--color-background-solution);
+    padding-bottom: 35px;
+}
+.solution__items {
+    display: flex;
+    justify-content: space-between;
+}
+.solution__item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.solution__text {
+    font-size: var(--size-big-text);
+    font-weight: var(--weight-big-text) ;
+    color: var(--color-text-light);
+    max-width: 249px;
+    text-align: center;
+    margin-top: 20px;
+}
+.solution__subtitle {
+    font-size: var(--size-big-text);
+    font-weight: var(--weight-big-text);
+    color: var(--color-text-light);
+    text-align: center;
+}
+.solution__subtitle h4{
+    margin: 40px 0 0 0;
+
 }
