--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -8,24 +8,38 @@ body {
     font-family: PT-sans, sans-serif;
 }
 
-.container{
+.container {
     max-width: 964px;
     margin: 0 auto;
 }
+
+.container.container_large {
+    max-width: 1100px;
+}
+
 .button {
     width: 160px;
-    height: 40px;
     padding: 10px;
     background-color: var(--color-button);
     border-radius: 20px;
     color: var(--color-button-text);
     font-size: var(--size-button-text);
+    height: 50px;
 }
+
+.button.button-yellow {
+    background-color: var(--color-yellow);
+    width: fit-content;
+    padding: 10px 20px 10px 20px;
+    color: var(--color-text);
+}
+
 .inner-wrapper {
     background-color: var(--color-background-super-light);
     padding: 30px;
     border-radius: 15px;
 }
+
 .section__title {
     color: var(--color-text-light);
     font-size: var(--size-title-text);
@@ -34,6 +48,7 @@ body {
     max-width: 906px;
     text-align: center;
 }
+
 .section__title-wrapper {
     background-color: var(--color-accent);
     padding: 30px 0 30px 0;
@@ -48,6 +63,7 @@ body {
     box-shadow: 0 15px 30px 10px rgba(0, 0, 0, .1);
     padding: 30px 0 0 0;
 }
+
 .sticky {
     position: fixed;
     top: 0;
@@ -65,6 +81,7 @@ body {
     justify-content: space-between;
 
 }
+
 /*HEADER_IMG*/
 .header__img-wrapper {
     max-width: 225px;
@@ -72,18 +89,21 @@ body {
     position: relative;
     display: flex;
 }
-.header__img-wheel_type_black{
+
+.header__img-wheel_type_black {
     width: 60px;
     height: 60px;
     position: absolute;
 }
-.header__img-wheel_type_red{
+
+.header__img-wheel_type_red {
     width: 43px;
     height: 43px;
     position: absolute;
     top: 8px;
     left: 9px;
 }
+
 .header__img-eye {
     width: 12px;
     height: 7px;
@@ -92,47 +112,56 @@ body {
     left: 100px;
 
 }
-.header__img{
+
+.header__img {
     padding-left: 65px;
     width: 155px;
     height: 55px;
 }
+
 /*HEADER_CITY*/
 .header__city-wrapper {
     max-width: 225px;
     display: flex;
     align-items: center;
 }
+
 .header__city-wrapper svg {
     width: 35px;
     height: 9px;
     margin-right: 10px;
 }
+
 /*HEADER_PHONE*/
 .header__telephone-wrapper {
     max-width: 250px;
     display: flex;
     flex-direction: column;
-    align-items:center;
+    align-items: center;
 }
+
 .header__btn {
     margin-top: 20px;
 }
+
 .header__telephone {
     font-weight: bold;
     font-size: 20px;
     color: var(--color-text);
 }
+
 /*===================================================================SLIDER_SECTION=================================================================================*/
 
 .slider__section {
     background-color: var(--color-yellow);
 }
+
 .slider__item {
     display: flex;
     justify-content: center;
     margin-top: 100px;
 }
+
 .slider__content {
     max-width: 500px;
     margin-left: 220px
@@ -142,11 +171,13 @@ body {
 .navigation__section {
     background-color: var(--color-accent);
 }
+
 .navigation__list {
     display: flex;
     justify-content: space-between;
     padding: 35px 0 35px 0;
 }
+
 .navigation__list-item a {
     font-size: var(--size-text);
     color: var(--color-text-light);
@@ -154,19 +185,22 @@ body {
 
 /*===================================================================ABOUT_SECTION=================================================================================*/
 
-.about__section{
+.about__section {
     padding: 35px 0 0 0;
     background-color: var(--color-background-light);
 }
+
 .about__top {
     display: flex;
     position: relative;
     min-height: 262px;
 }
+
 .about__text {
     max-width: 640px;
     font-size: var(--size-text);
 }
+
 .about__img {
     width: 294px;
     height: 330px;
@@ -174,6 +208,7 @@ body {
     top: -50px;
     right: -50px;
 }
+
 .about__video {
     height: 494px;
     width: 904px;
@@ -182,6 +217,7 @@ body {
     background-position: center center;
     object-fit: contain;
 }
+
 /*===================================================================PROGRAM_SECTION=================================================================================*/
 
 .program__wrapper {
@@ -192,14 +228,17 @@ body {
 .program__content {
     margin-top: 60px;
 }
+
 .program__item {
     display: flex;
     margin-bottom: 24px;
 }
+
 .program__item-info {
     max-width: 466px;
     margin-right: 40px;
 }
+
 .program__subtitle {
     margin-top: 20px;
     font-weight: var(--subtitle-font-weight);
@@ -207,29 +246,35 @@ body {
     color: var(--subtitle-font-color);
     margin-bottom: 15px;
 }
+
 .program__text {
     font-weight: var(--size-button-text);
     margin-bottom: 15px;
 }
+
 .program__time-wrapper {
     display: flex;
     align-items: center;
 }
+
 .program__clock-img {
     width: 40px;
     height: 40px;
     margin-right: 10px;
 }
+
 .program__time {
     font-weight: var(--bold-accent-font-weight);
     font-size: var(--bold-accent-font-size);
 
 }
+
 .program_bottom {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
+
 .program__btn {
     margin-top: 25px;
 }
@@ -239,67 +284,346 @@ body {
     background-color: var(--color-background-solution);
     padding-bottom: 40px;
 }
+
 .solution__content {
     background-color: var(--color-background-solution);
     padding-bottom: 35px;
 }
+
 .solution__items {
     display: flex;
     justify-content: space-between;
 }
+
 .solution__item {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
+
 .solution__text {
     font-size: var(--size-big-text);
-    font-weight: var(--weight-big-text) ;
+    font-weight: var(--weight-big-text);
     color: var(--color-text-light);
     max-width: 249px;
     text-align: center;
     margin-top: 20px;
 }
+
 .solution__subtitle {
     font-size: var(--size-big-text);
     font-weight: var(--weight-big-text);
     color: var(--color-text-light);
     text-align: center;
 }
-.solution__subtitle h4{
+
+.solution__subtitle h4 {
     margin: 40px 0 0 0;
 
 }
+
 /*===================================================================AFFICHE_SECTION=================================================================================*/
 
 .section__title-wrapper_type_white {
     background-color: var(--color-background-light);
 }
+
 .affiche__title {
     color: var(--color-accent);
     max-width: 642px;
 }
-.affiche__content{
+
+.affiche__content {
     background-color: var(--color-background-accent);
+    background-image: url("/assets/img/affiche/affiche_bg.png");
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 70px 0 70px 0;
 }
+
 .affiche__items {
     display: flex;
     flex-direction: column;
+    margin-left: 250px;
 }
+
 .affiche__item {
     display: flex;
-    justify-content: space-between;
+    margin-bottom: 20px;
 }
+
 .affiche__date {
     color: var(--color-text);
     font-weight: var(--weight-big-text);
     font-size: var(--bold-accent-font-size);
     padding: 11px 40px 11px 40px;
     background-color: var(--affiche-date-color);
+    border-radius: 25px;
+    margin-right: 25px;
 }
+
+.affiche__time-wrapper {
+    display: flex;
+    width: 65%;
+}
+
 .affiche__time {
     color: var(--color-text);
     font-weight: var(--weight-big-text);
     font-size: var(--bold-accent-font-size);
+    background-color: var(--affiche-time-color);
+    padding: 11px 40px 11px 40px;
+    border-radius: 25px;
+}
 
+.affiche__time.affiche__time_type_empty {
+    background-color: transparent;
+    pointer-events: none;
+    width: 140px;
+}
+
+/*===================================================================PRICE_SECTION=================================================================================*/
+.price__section {
+    display: flex;
+    justify-content: space-between;
+}
+
+.price__title {
+    font-family: var(--title-font-family);
+    font-weight: var(--title-MONO-font-weight);
+    font-size: var(--title-MONO-font-size);
+    color: var(--color-accent);
+    margin-bottom: 20px;
+}
+
+.price__text {
+    font-size: var(--size-text);
+    max-width: 900px;
+    margin-bottom: 20px;
+}
+
+.price__tickets {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    margin-top: 20px;
+    margin-bottom: 25px;
+}
+
+.price__ticket {
+    max-width: 288px;
+    border-radius: 15px;
+    border: 2px solid var(--color-accent);
+}
+
+.price__ticket-top {
+    display: flex;
+    align-items: center;
+    padding: 15px;
+}
+
+.price__ticket-img {
+    margin-right: 15px;
+}
+
+.price__ticket-title {
+    font-size: 20px;
+    font-weight: var(--title-MONO-font-weight);
+    font-family: var(--title-font-family);
+    color: var(--color-accent);
+}
+
+.price__ticket-mid {
+    padding: 15px;
+}
+
+.price__ticket-text {
+    font-size: var(--size-text);
+    margin-bottom: 10px;
+}
+
+.price__ticket-footer {
+    background-color: var(--price-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px 0 20px 0;
+    border-radius: 0 0 15px 15px;
+}
+
+.price__ticket-sum {
+    color: var(--color-accent);
+    font-size: var(--bold-accent-font-size);
+    font-weight: var(--bold-accent-font-weight);
+}
+
+.price__special-title {
+    font-size: var(--bold-accent-font-size);
+    font-weight: var(--bold-accent-font-weight);
+    font-family: var(--title-font-family);
+    color: var(--color-text-light);
+    margin: 0;
+}
+
+.price__special-dropdown-head {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: var(--color-accent);
+    padding: 20px;
+    border-radius: 15px;
+}
+
+.price__special-slide {
+    border: 2px solid var(--color-accent);
+    border-top: none;
+    padding: 50px 20px 20px 20px;
+    margin: -30px 0 0 0;
+    border-radius: 0 0 15px 15px;
+}
+
+.price__special-text {
+    font-weight: var(--size-text);
+    margin-bottom: 20px;
+}
+
+.price__inner-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+    margin-top: 20px;
+    border: 2px solid var(--color-accent);
+}
+
+.price__text {
+    margin: 0;
+}
+
+.price__buttons {
+    display: flex;
+    margin-top: 25px;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+}
+
+/*===================================================================TREE_SECTION=================================================================================*/
+.tree__content {
+    background-color: var(--color-background-solution);
+}
+.tree__items {
+
+}
+
+.tree__section .slider__item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 0;
+}
+
+.tree__section .slider__img {
+    border-radius: 15px 15px 0 0;
+}
+
+.tree__section .slider__text {
+    background-color: var(--color-background-super-light);
+    padding: 20px 20px 20px 20px;
+    border-radius: 0 0 15px 15px;
+    width: 100%;
+    text-align: center;
+    font-family: var(--title-font-family);
+    font-size: 20px;
+    font-weight: var(--weight-big-text);
+}
+
+/*===================================================================FAQ_SECTION=================================================================================*/
+.faq__section {
+    background-color: var(--color-background-light);
+}
+.faq__section-title {
+    font-family: var(--title-font-family);
+    font-weight: var(--bold-accent-font-weight);
+    color: var(--color-text);
+    font-size: var(--size-title-text);
+    margin-top: 40px;
+}
+.faq__content {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 35px;
+}
+.faq__dropdowns {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    max-width: 600px;
+}
+.faq__dropdown {
+    max-width: 600px;
+    position: absolute;
+    z-index: 1;
+}
+.faq__dropdown-head {
+    padding: 20px;
+    background-color: var(--color-background-super-light);
+    border-radius: 15px;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 600px;
+    width: 200%;
+}
+.faq__title {
+    font-weight: var(--bold-accent-font-weight);
+    font-size: var(--size-text);
+    margin: 0;
+}
+.faq__slide {
+    background-color: var(--color-background-super-light);
+    padding: 50px 20px 20px 20px;
+    border-radius: 0 0 15px 15px;
+    margin-top: -30px;
+    position: relative;
+    top: 0;
+    left: 0;
+    z-index: -1;
+}
+.faq__text {
+    font-size: var(--size-text);
+}
+.faq__dropdown-head.active {
+    background-color: var(--color-yellow);
+}
+/*===================================================================FOOTER=================================================================================*/
+
+.footer__top {
+    display: flex;
+    margin-bottom: -160px
+}
+.footer__content {
+    display: flex;
+    flex-direction: column;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.footer__bottom {
+    padding-top: 160px;
+    background-color: var(--color-yellow);
 }
