--- a/assets/css/normalize.css
+++ b/assets/css/normalize.css
@@ -38,6 +38,9 @@ ul {
     margin: 0;
     padding: 0;
 }
+*{
+    box-sizing: border-box;
+}
 /* Sections
    ========================================================================== */
 
