--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -12,6 +12,8 @@
     --color-background-super-light: #FFFF;
     --color-background-solution:#009245;
     --color-background-accent: #E63323;
+    --color-footer-dots: #80857C;
+    --color-footer-orange: #F19E38;
 
     --size-button-text: 16px;
     --size-text: 18px;
