--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -4,6 +4,7 @@
     --color-yellow: #FED832;
     --affiche-date-color: #FFDA00;
     --price-color:#FFDA00;
+    --color-header-slide: #ececec;
     --affiche-time-color: #ffff;
     --color-accent: #E63323;
     --color-text: #1D1E1C;
